# snake-lsp-ocaml-helpers

./: assembly.ml  compile.ml  dune  helpers.test.js  package.json  runner.ml  testing.ml
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/input/: all-00000000000000000000000000000000
_build/default/: dune  exprs.ml  helpers.test.js  index.js  lsphelpers.ml  racer_impl.cma  racer_impl.cmxa  racer_impl.cmxs  testing.bc  testing.bc.js  testing.ml  testing.pp.ml
_build/default/.dune/: configurator  configurator.v2
_build/default/.js/extlib/: extLib.cma.js
_build/default/.js/js_of_ocaml/: js_of_ocaml.cma.js
_build/default/.js/stdlib/: std_exit.cmo.js  stdlib.cma.js
_build/default/.merlin-conf/: exe-testing  lib-racer_impl
_build/default/.ppx/7b799aed44581cc79b02033532c5f775/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.racer_impl.objs/: errors.impl.all-deps  lexer.impl.all-deps  pretty.impl.all-deps  racer_impl.cma.js
_build/default/.racer_impl.objs/byte/: errors.cmi  errors.cmo  errors.cmt  exprs.cmi  exprs.cmo  exprs.cmt  lexer.cmi  lexer.cmo  lexer.cmt  parser.cmi  parser.cmo  parser.cmt  parser.cmti  pretty.cmi  pretty.cmo  pretty.cmt
_build/default/.racer_impl.objs/native/: errors.cmx  exprs.cmx  lexer.cmx  parser.cmx  pretty.cmx
_build/default/.testing.eobjs/: testing.pp.ml.d
_build/default/.testing.eobjs/byte/: testing.cmi  testing.cmo  testing.cmo.js  testing.cmt
input/do_err/: README
input/do_pass/: README
input/dont_err/: README
input/dont_pass/: README
(+9 files in other folders)
