(library
 (name racer_impl)
 (modules errors exprs pretty lexer parser)
 ;  (modules)
 (libraries extlib js_of_ocaml)
 (wrapped false))

(ocamllex
 (modules lexer))

(ocamlyacc
 (modules parser))

(executable
 ;  (name lsphelpers)
 ;  (modules lsphelpers)
 (name testing)
 (modules testing)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries racer_impl))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
